# thedecoder

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md
.github/workflows/: deploy.yml
src/: disasm.cpp  i18n.h  python_rev.h  strings_extractor.h  thedecoder.cpp  visualizer.cpp  visualizer.h
src/ide/: highlighter.cpp  highlighter.h  main.cpp  mainwindow.cpp  mainwindow.h
test/: auto_arch.asm  cli_test.asm.map.md  disasm_viz.asm  disasm_viz.asm.map.md  verified_output.asm
tools/: pycdc
